# QTileLayout

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/QTileLayout/: QTileLayout_global.h  qtilelayout.h  qtilewidget.h
src/: qtilelayout.cpp  qtilewidget.cpp
test/: main.cpp  testwindow.cpp  testwindow.h
